trunk/Archive2/c1/e4c2e109bd4ca0/output
main.cpp:7:16: error: two or more data types in declaration of 'main'
  int void main()
                ^
