trunk/Archive2/c1/e4c2e109bd4ca0/main.cpp
#include <iostream>
#include <math.h>
#include <string>
 using namespace std;
 
 
 int void main()
 {
  
    
     
     int hours=0;
     double rph=0;
     double tax1=0;
     double tax2=0;
     double networth=0;
     int input=input;
     
     cout<<"Enter No. of Hours Worked:"<<endl;
     cin>>hours;
     
     
     cout<<"Enter Rate per Hour:"<<endl;
     cin>>rph;
     
     
     cout<<"Enter Tax Acquired:"<<endl;
     cin>>tax1;
     
     input= hours
     input= rph
     input= tax1
     
     tax2 = hours * rph - tax1;
     networth= tax2;
     
     
     cout<<"Your Toatal NetWorth is:"<<endl;
     cin>>networth;
     
     
     return 0;
     
 
     
     
}
